[gd_scene load_steps=18 format=3 uid="uid://ymef651v1yws"]

[ext_resource type="Script" path="res://objects/item_list_element2.gd" id="1_80c12"]
[ext_resource type="StyleBox" uid="uid://bwo64t2nmfot" path="res://styles/ItemList2PanelStyle.tres" id="1_a1fgo"]
[ext_resource type="Script" path="res://FitLabel.gd" id="2_plgqh"]
[ext_resource type="Texture2D" uid="uid://bdhl7lo2ybw66" path="res://textures/unfoldButton.png" id="3_ssqxq"]
[ext_resource type="Texture2D" uid="uid://cg2o8xgo1gb5w" path="res://textures/unfoldButton_pressed.png" id="4_l4xdh"]
[ext_resource type="Texture2D" uid="uid://db60i04y7fo6a" path="res://textures/unfoldButton_hl.png" id="5_y15y4"]
[ext_resource type="Texture2D" uid="uid://dn1q6s8e7t55l" path="res://w_rect.png" id="6_1mdqn"]
[ext_resource type="StyleBox" uid="uid://c5i134ur1to60" path="res://styles/edittext_base_style.tres" id="6_bg6ey"]
[ext_resource type="StyleBox" uid="uid://ydrmcbb64npw" path="res://styles/framed_button_normal.tres" id="7_b7ah0"]
[ext_resource type="Texture2D" uid="uid://belhmi6u74jhi" path="res://textures/updown.png" id="7_kuv32"]
[ext_resource type="StyleBox" uid="uid://bfdnm6y4j5a11" path="res://styles/framed_button_hover.tres" id="8_bgha2"]
[ext_resource type="StyleBox" uid="uid://chknldgol0rwk" path="res://styles/framed_button_pressed.tres" id="9_llh3k"]

[sub_resource type="Theme" id="Theme_xicdx"]
default_font_size = 45

[sub_resource type="Animation" id="Animation_afqj2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(500, 150)]
}

[sub_resource type="Animation" id="Animation_pan3q"]
resource_name = "unfold"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(500, 150), Vector2(500, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_am56h"]
_data = {
"RESET": SubResource("Animation_afqj2"),
"unfold": SubResource("Animation_pan3q")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tjidt"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ItemListComponent" type="Panel"]
custom_minimum_size = Vector2(500, 150)
theme_override_styles/panel = ExtResource("1_a1fgo")
script = ExtResource("1_80c12")

[node name="TitleControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TitleControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.84
anchor_bottom = 1.0
offset_left = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
text = "Item Name"
vertical_alignment = 1
script = ExtResource("2_plgqh")

[node name="UnfoldButton" type="TextureButton" parent="TitleControl"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("3_ssqxq")
texture_pressed = ExtResource("4_l4xdh")
texture_hover = ExtResource("5_y15y4")
stretch_mode = 3

[node name="DataControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 45.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Edit" type="TextEdit" parent="DataControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_readonly_color = Color(0.254902, 0.368627, 0.219608, 1)
theme_override_constants/caret_width = 6
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("6_bg6ey")
theme_override_styles/focus = ExtResource("6_bg6ey")
theme_override_styles/read_only = ExtResource("6_bg6ey")
placeholder_text = "Enter an Item Name"
editable = false
context_menu_enabled = false
wrap_mode = 1
caret_blink = true

[node name="SpinBox" type="SpinBox" parent="DataControl"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_xicdx")
theme_override_icons/updown = ExtResource("7_kuv32")
max_value = 10000.0
allow_greater = true
alignment = 1
update_on_text_changed = true

[node name="Button" type="Button" parent="DataControl"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("7_b7ah0")
theme_override_styles/hover = ExtResource("8_bgha2")
theme_override_styles/pressed = ExtResource("9_llh3k")
text_overrun_behavior = 1

[node name="Label" type="Label" parent="DataControl/Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "/"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_am56h")
}

[node name="IconControl" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="IconButton" type="Button" parent="IconControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 65.0
offset_right = -140.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = ExtResource("7_b7ah0")
theme_override_styles/hover = ExtResource("8_bgha2")
theme_override_styles/pressed = ExtResource("9_llh3k")
text = "Select Image
"
text_overrun_behavior = 1

[node name="P" type="Panel" parent="IconControl"]
clip_children = 1
clip_contents = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tjidt")

[node name="ItemIcon" type="TextureRect" parent="IconControl/P"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6_1mdqn")
expand_mode = 2

[connection signal="pressed" from="TitleControl/UnfoldButton" to="." method="toggle_unfold"]
[connection signal="pressed" from="DataControl/Button" to="." method="_on_location_button_pressed"]
